# EduFlowHosting

./: .gitignore  README.md
eduflow_sso_web_app/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
eduflow_sso_web_app/.opencode/: agents.md
eduflow_sso_web_app/app/: config.py  database.py  main.py  scheduler.py  sync_scheduler.py
eduflow_sso_web_app/app/auth/: __init__.py  dependencies.py  oauth_client.py
eduflow_sso_web_app/app/routers/: __init__.py  auth.py  monitor.py  upload.py
eduflow_sso_web_app/app/services/: audio.py  postgres_sync.py  r2_upload.py  transcription.py
eduflow_sso_web_app/ui/: app.css  app.js  fonts.css  index.html  monitor.html  monitor.js  monitor_403.html  secondary_index.html
n8n-hosting/docker-compose/withPostgresPGVectorExtension/: .env  docker-compose.yml  init-data.sh  sample.env
